--- a/templates/index.html
+++ b/templates/index.html
@@ -1,99 +1,118 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+
 {% block content %}
+            <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4 py-4">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="/">Home</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Overview</li>
 
-<div class="container">
-<br>
-  <div style="display: flex; ">
-    <img src='/static/logo.png' width=300 height=150>
-    <hr>
-  </div><br>
+                    </ol>
+                </nav>
+                <h1 class="h2">Dashboard</h1>
+                <p>Please upload your dataset here.</p>
 
-<!-- File upload  -->
-  <div class="input-group">
+                <!-- File upload  -->
+                  <div class="input-group">
 
-      <form action = "http://127.0.0.1:5000/" method = "POST"
-               enctype = "multipart/form-data" align=''>
-      <input type="file" class="custom-file-input" id="inputGroupFile04" name="file">
-      <label class="custom-file-label" for="inputGroupFile04">Choose file</label>
-      <br>
-       <div class="input-group-append">
-      <input class="btn btn-outline-secondary" type="submit" value="Upload">
+                      <form action = "http://127.0.0.1:5000/" method = "POST"
+                               enctype = "multipart/form-data" align=''>
+                      <input type="file" class="custom-file-input" id="inputGroupFile04" name="file">
+                      <label class="custom-file-label" for="inputGroupFile04">Choose file</label>
+                      <br> <br>
+                       <div class="input-group-append">
+                      <input class="btn btn-outline-secondary" type="submit" value="Upload">
+                        </div>
+                      </form>
+                  </div>
+
+                  <br>
+                  <div class="row">
+                      <div class="col-12 col-xl-12 mb-4 mb-lg-0">
+                          <div class="card">
+                              <h5 class="card-header">Recent datasets</h5>
+                          </div>
+                      </div>
+                  </div>
+
+
+
+
+
+
+                <div class="row my-4">
+                    <div class="col-12 col-md-12 col-lg-6 mb-4 mb-lg-0">
+                        <div class="card">
+                            <h5 class="card-header">Existing datasets</h5>
+                            <div class="card-body">
+                              <table class="table table-sm">
+
+                                  <tbody>
+                                    {% for ds in originalds %}
+                                    <tr>
+                                      <td class="align-baseline"><a href='datasets/{{ds}}'>{{ds}}</a></td>
+                                    </tr>
+                                    {% endfor %}
+                                  </tbody>
+                              </table>
+
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-12 col-md-6 mb-4 mb-lg-0 col-lg-6">
+                        <div class="card">
+                            <h5 class="card-header">Preprocessed datasets</h5>
+                            <div class="card-body">
+                              <table class="table">
+
+                                <tbody>
+                                  {% for ds in featuresds %}
+                                  <tr>
+                                    <td class="align-baseline"><a href='datasets/{{ds}}'>{{ds}}</a></td>
+                                    {% endfor %}
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </div>
+                          </div>
+                    </div>
+
+
+                </div>
+                <div class="row">
+                    <div class="col-12 col-xl-8 mb-4 mb-lg-0">
+                        <div class="card">
+                            <h5 class="card-header">Publications</h5>
+                            <div class="card-body">
+
+                                <a href="#" class="btn btn-block btn-light">View all</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-xl-4">
+                        <div class="card">
+                            <h5 class="card-header">Traffic last 6 months</h5>
+                            <div class="card-body">
+                                <div id="traffic-chart"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <footer class="pt-5 d-flex justify-content-between">
+                    <span>Copyright © 2022 <a href="https://bam.de">BAM</a></span>
+                    <ul class="nav m-0">
+                        <li class="nav-item">
+                          <a class="nav-link text-secondary" aria-current="page" href="#">Privacy Policy</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link text-secondary" href="#">Terms and conditions</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link text-secondary" href="#">Contact</a>
+                        </li>
+                      </ul>
+                </footer>
+            </main>
         </div>
-      </form>
-  </div>
-
-
-<!-- display files into tables  -->
-<table class="table table-sm">
-  <thead class="">
-    <tr>
-      <th scope="col">Existing datasets</th>
-    </tr>
-  </thead>
-  <tbody>
-      {% for ds in originalds %}
-        <tr>
-      <td class="align-baseline"><a href='datasets/{{ds}}'>{{ds}}</a></td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-
-  <table class="table">
-    <thead class="">
-      <tr>
-        <th scope="col">Preprocessed datasets</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for ds in featuresds %}
-  <tr>
-      <td class="align-baseline"><a href='datasets/{{ds}}'>{{ds}}</a></td>
-
-      {% endfor %}
-  </tr>
-  </tbody>
-</table>
-
-
-
-
-
-
-
-<!--
-
-            <form action = "http://127.0.0.1:5000/" method = "POST"
-                     enctype = "multipart/form-data">
-                     <input type = "file" name="file" class="form-control-file">
-                     <div class="input-group-append">
-                     <input type = "submit" class="btn btn-success mt-2" value="Upload">
-                     </div>
-            </form>
-
-
-
-
-<h2 align='center'>Existing datasets</h2>
-{% for ds in originalds %}
-<h3 align='center'><a href='datasets/{{ds}}'>{{ds}}</a></h3>
-{% endfor %}
-<h2 align='center'>Datasets after preprocessing:</h2>
-{% for ds in featuresds %}
-<h3 align='center'><a href='datasets/{{ds}}'>{{ds}}</a></h3>
-{% endfor %}
-</br>
-<div align='center'>
-<form action = "http://127.0.0.1:5000/" method = "POST"
-         enctype = "multipart/form-data" align='center'>
-         <input type = "file" name = "file" align='center'>
-         <input type = "submit" align='center' value="Upload">
-</form></div>
-</div>
-
--->
-
-
-
-
-{% endblock %}
+    </div>
+{%endblock%}
