--- a/templates/preprocessing.html
+++ b/templates/preprocessing.html
@@ -27,6 +27,8 @@
         <input type="text" class="form-control" placeholder="(Automatic) Number of features (Chi-squared)" name="nfeatures">
       </div>
       <div class="col">
+        <input type="text" class="form-control" placeholder="samples" name="samples">
+
         <label for="targetvariable">Target Variable:</label>
         <select  class="form-control" name="response">
           {% for col in columns %}
