--- a/templates/sequential.html
+++ b/templates/sequential.html
@@ -1,19 +1,18 @@
 {% extends "base.html" %}
+
 {% block content %}
 
 
 <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4 py-4">
-
   <nav aria-label="breadcrumb">
-      <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/datasets/{{dataset}}/preprocessing">sequential</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Overview</li>
-
-      </ol>
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/datasets/{{dataset}}/preprocessing">sequential</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Overview</li>
+    </ol>
   </nav>
-<form class="form-group" method="post" action='/datasets/{{dataset}}/sequentialprocess'>
-  <h3 class="form-features-heading" align=''>Settings</h3>
-<br>
+  <form class="form-group" method="post" action='/datasets/{{dataset}}/sequentialprocess'>
+    <h3 class="form-features-heading" align=''>Settings</h3>
+    <br>
 
     <!-- selecting features, fixed_target and target data -->
 <!-- ------------------------------------------------------------------------------- -->
@@ -21,27 +20,27 @@
     <div class="col-sm-5">
       <h6>Features:</h6>
        <select multiple name="features" class="form-control" required>
-  		     <option value=""></option>
-              {% for col in columns %}
-  			         <option value="{{col}}">{{col}}</option>
-  		        {% endfor %}
+  		    <option value=""></option>
+            {% for col in columns %}
+  			      <option value="{{col}}">{{col}}</option>
+  		      {% endfor %}
       </select>
     </div>
 
     <div class="col-sm-4">
       <h6>Target Variable:</h6>
         <select multiple name="targets" class="form-control" required>
-            {% for col in columns %}
-              <option value="{{col}}">{{col}}</option>
-            {% endfor %}
+          {% for col in columns %}
+            <option value="{{col}}">{{col}}</option>
+          {% endfor %}
         </select>
     </div>
     <div class="col-sm-3">
       <h6>Fixed Target:</h6>
-        <select name="fixedtargets" class="form-control is-valid" required>
-            {% for col in columns %}
-              <option value="{{col}}">{{col}}</option>
-            {% endfor %}
+        <select multiple name="fixedtargets" class="form-control" required>
+          {% for col in columns %}
+            <option value="{{col}}">{{col}}</option>
+          {% endfor %}
         </select>
     </div>
   </div>
@@ -57,12 +56,12 @@
 
     <div class="col-sm-4">
       <h7>Model:</h7>
-        <select name="models" class="form-control is-valid" >
-              <option hidden>Select Model</option>
-              <option value="Gaussian Process Regression (GPR)">Gaussian Process Regression (GPR)</option>
-              <option value="lolo Random Forrest (RF)">lolo Random Forrest (RF)</option>
-              <option value="Decision Trees (DT)">Decision Trees (DT)</option>
-              <option value="Random Forrest (RFscikit)">Random Forrest (RFscikit)</option>
+        <select name="models" class="form-control" >
+          <option hidden>Select Model</option>
+          <option value="Gaussian Process Regression (GPR)">Gaussian Process Regression (GPR)</option>
+          <option value="lolo Random Forrest (RF)">lolo Random Forrest (RF)</option>
+          <option value="Decision Trees (DT)">Decision Trees (DT)</option>
+          <option value="Random Forrest (RFscikit)">Random Forrest (RFscikit)</option>
         </select>
     </div>
 
@@ -78,18 +77,18 @@
       <div class="col-sm-5">
         <label for="customRange3" class="form-label"># of SL runs:</label>
         <input name='iterate' type="range" class="form-range form-range-thumb-width" min="1" max="100" id="customRange3" onInput="$('#rangeval2').html($(this).val())">
-         <span id="rangeval2"><!-- Default value --></span>
+        <span id="rangeval2"><!-- Default value --></span>
       </div>
 
     <div class="col-sm-4">
       <h7>Strategy:</h7>
         <select name="strategy" class="form-control" id="strategy">
-              <option hidden>Select Strategy</option>
-              <option value="1">MEI (exploit)</option>
-              <option value="2">MU (explore)</option>
-              <option value="3">MLI (exploit & explore)</option>
-              <option value="4">MEID (exploit)</option>
-              <option value="5">MLID (explore & exploit)</option>
+          <option hidden>Select Strategy</option>
+          <option value="1">MEI (exploit)</option>
+          <option value="2">MU (explore)</option>
+          <option value="3">MLI (exploit & explore)</option>
+          <option value="4">MEID (exploit)</option>
+          <option value="5">MLID (explore & exploit)</option>
         </select>
     </div>
 
@@ -105,9 +104,4 @@
   </form>
 
 </main>
-
-
-
-
-
 {% endblock %}
