--- a/templates/base.html
+++ b/templates/base.html
@@ -66,10 +66,6 @@
          line-height: 1.6em;
        }
 
-       #sigma {
-         display:none;
-       }
-
   </style>
 
 
@@ -141,6 +137,12 @@
               </a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/datasets/{{dataset}}/discovery">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
+                  <span class="ml-2">MD</span>
+              </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/datasets/{{dataset}}/predict">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg>
                   <span class="ml-2">Predictions</span>
@@ -176,6 +178,7 @@
   <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
             <!-- Github buttons -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
+  <script async defer src="https://github.com/ghezalahmad/SLAMD-Flask/blob/main/static/js/strategy.js"></script>
 
 
 
