--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -20,7 +20,7 @@
 	  <h3>Algorithm:</h3>
 	  <h4>{{algorithm}}</h4>
 	  <h3>Task:</h3>
-	  <h4>{{score}}</h4>
+	<!--  <h4>{{score}}</h4>-->
 	</div>
 
 	<div class="col-sm-5">
